# fensu

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  fensu.toml  pyproject.toml  release-please-config.json  strata.toml
crates/fensu-cli/: Cargo.toml
crates/fensu-cli/assets/: catalogue.json  skills_invariant.json
crates/fensu-cli/src/: constants.rs  lib.rs  main.rs  models.rs
crates/fensu-cli/src/command/: constants.rs  mod.rs  models.rs
crates/fensu-cli/src/command/helpers/: map_parsing.rs  memory_execution.rs  memory_graph_rendering.rs  memory_help.rs  memory_human_rendering.rs  memory_parsing.rs  memory_structured_rendering.rs  memory_values.rs  mod.rs
crates/fensu-cli/src/command/main/: help.rs  map.rs  memory.rs  mod.rs  rule.rs  run_cli.rs  skills.rs
crates/fensu-cli/src/configuration/: mod.rs
crates/fensu-cli/src/configuration/helpers/: discovery.rs  (+5 more)
crates/fensu-cli/src/helpers/: cache.rs  check_cleanup.rs  check_evaluation.rs  check_execution.rs  check_policy.rs  check_project.rs  config.rs  init.rs  mod.rs  process.rs  rule.rs
crates/fensu-cli/src/mapping/: constants.rs  mod.rs  models.rs
crates/fensu-cli/src/skills/: mod.rs  models.rs
crates/fensu-cli/tests/: command.rs  mapping.rs  skills.rs
crates/fensu-cli/tests/command/: check_cleanup.rs  check_policy.rs  commands.rs  helpers.rs  test_types.rs
crates/fensu-cli/tests/mapping/: commands.inc  commands.rs  helpers.rs
crates/fensu-cli/tests/skills/: commands.inc  helpers.rs  test_types.rs
crates/fensu-memory/: Cargo.toml
crates/fensu-memory/src/: lib.rs
crates/fensu-memory/src/corpus/: types.rs
crates/fensu-memory/src/engine/: mod.rs
crates/fensu-memory/src/graph/: types.rs
crates/fensu-memory/src/markdown/: constants.rs  mod.rs  types.rs
crates/fensu-memory/tests/: corpus.rs  engine.rs  graph.rs  markdown.rs
crates/fensu-memory/tests/corpus/: helpers.rs  loading.rs  test_types.rs
crates/fensu-memory/tests/engine/: archive.rs  bootstrap.rs  check.rs  dependencies.rs  graph_query.rs  helpers.rs  overview.rs  performance.rs  query.rs  schema.rs  streaming.rs  summary.rs  sync.rs  test_types.rs
crates/fensu-memory/tests/graph/: dependencies.rs  helpers.rs  resolution.rs  test_types.rs
crates/fensu-memory/tests/markdown/: code_blocks.rs  links.rs  lists.rs  structure.rs  test_types.rs
crates/fensu-memory/tests/source/: collisions.rs  discovery.rs  git_worktrees.rs  helpers.rs  symlinks.rs  test_types.rs
crates/fensu-native/: Cargo.toml
crates/fensu-native/src/: lib.rs
crates/fensu-native/src/cache/: constants.rs  mod.rs  models.rs  tests.rs
crates/fensu-native/src/extension/: constants.rs
crates/fensu-native/src/rules/: constants.rs  mod.rs  models.rs
crates/fensu-native/tests/: rules.rs
crates/fensu-native/tests/extension/: memory_conversion.rs
crates/fensu-native/tests/rules/: contracts.rs  helpers.rs  test_types.rs
crates/fensu-structure-checker/: Cargo.toml
crates/fensu-structure-checker/src/: constants.rs  lib.rs  main.rs  models.rs
crates/fensu-structure-checker/tests/rules/: containers.rs  helpers.rs  layers.rs  role_files.rs  roles.rs  shape.rs  test_types.rs  tests_layout.rs
crates/strata-cli/: Cargo.toml  build.rs
crates/strata-cli/assets/: catalogue.json  python.gitignore
crates/strata-cli/src/: lib.rs  main.rs  models.rs
crates/strata-cli/src/helpers/: cache.rs  check_evaluation.rs  check_execution.rs  check_policy.rs  check_project.rs  config.rs  init.rs  mod.rs  process.rs  render.rs  rule.rs
crates/strata-facts/: Cargo.toml  README.md  pyproject.toml  strata_facts.pyi
crates/strata-facts/src/: constants.rs  lib.rs
crates/strata-facts/src/extension/: mod.rs  models.rs
crates/strata-facts/src/facts/: mod.rs  models.rs  types.rs
crates/strata-facts/src/parsing/: mod.rs  models.rs
crates/strata-facts/src/positions/: mod.rs  models.rs
crates/strata-facts/src/snapshot/: constants.rs  mod.rs  models.rs
crates/strata-facts/tests/: facts.rs  parsing.rs  positions.rs  snapshot.rs
crates/strata-facts/tests/facts/: enumerate.rs  mapping.rs  rule_authoring.rs  test_types.rs
crates/strata-facts/tests/parsing/: strict.rs  test_types.rs
crates/strata-facts/tests/positions/: locate.rs  test_types.rs
crates/strata-facts/tests/snapshot/: contexts.rs  globs.rs  hashing.rs  helpers.rs  observations.rs  stats.rs  test_types.rs  walk.rs
crates/strata-memory/: Cargo.toml
crates/strata-memory/src/corpus/: mod.rs  models.rs
crates/strata-memory/src/engine/: constants.rs  errors.rs  mod.rs  models.rs
crates/strata-memory/src/graph/: mod.rs  models.rs
crates/strata-memory/src/markdown/: models.rs
crates/strata-memory/src/source/: constants.rs  mod.rs  models.rs  types.rs
crates/strata-memory/tests/: source.rs
crates/strata-memory/tests/corpus/: helpers.rs  loading.rs  test_types.rs
crates/strata-memory/tests/engine/: archive.rs  check.rs  dependencies.rs  graph_query.rs  helpers.rs  overview.rs  performance.rs  query.rs  schema.rs  streaming.rs  summary.rs  sync.rs  test_types.rs
crates/strata-memory/tests/graph/: dependencies.rs  helpers.rs  resolution.rs  test_types.rs
crates/strata-memory/tests/markdown/: code_blocks.rs  links.rs  lists.rs  structure.rs  test_types.rs
crates/strata-memory/tests/source/: collisions.rs  discovery.rs  git_worktrees.rs  helpers.rs  symlinks.rs  test_types.rs
crates/strata-native/: Cargo.toml
crates/strata-native/src/: lib.rs
crates/strata-native/src/cache/: constants.rs  models.rs  types.rs
crates/strata-native/src/extension/: mod.rs
crates/strata-native/src/rules/: constants.rs  models.rs
crates/strata-native/tests/extension/: memory_conversion.rs  test_types.rs
crates/strata-structure-checker/: Cargo.toml
crates/strata-structure-checker/src/: constants.rs  lib.rs  main.rs  models.rs  types.rs
crates/strata-structure-checker/src/rules/: mod.rs
crates/strata-structure-checker/tests/: rules.rs
crates/strata-structure-checker/tests/rules/: helpers.rs  hygiene.rs  layers.rs  naming.rs  shape.rs  tests_layout.rs  tests_shape.rs
(+1986 files in other folders)
