[package]
name = "fensu-cli"
version = "0.4.0" # x-release-please-version
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[lints]
workspace = true

[[bin]]
name = "fensu"
path = "src/main.rs"

[dependencies]
cap-fs-ext.workspace = true
cap-std.workspace = true
dunce.workspace = true
encoding_rs.workspace = true
globset.workspace = true
rayon.workspace = true
ruff_python_ast.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
fensu-facts = { workspace = true, default-features = false }
# Keep the complete local workspace dependency graph in the CLI sdist.
fensu-memory = { workspace = true, features = ["sqlite-engine"] }
fensu-native = { workspace = true, default-features = false }
toml.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
serde_json.workspace = true
