[package]
name = "fensu-structure-checker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
toml.workspace = true
walkdir.workspace = true

[lib]
name = "fensu_structure_checker"
path = "src/lib.rs"

[[bin]]
name = "fensu-structure-checker"
path = "src/main.rs"
