[package]
name = "strata-cli"
version = "0.19.0" # x-release-please-version
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[lints]
workspace = true

[[bin]]
name = "strata"
path = "src/main.rs"

[dependencies]
globset.workspace = true
rayon.workspace = true
ruff_python_ast.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strata-facts.workspace = true
# Keep the complete local workspace dependency graph in the CLI sdist.
strata-memory.workspace = true
strata-native = { workspace = true, features = ["extension-module"] }
toml.workspace = true
walkdir.workspace = true

[build-dependencies]
serde_json.workspace = true
