[package]
name = "strata-facts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "strata_facts"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py312"] }

[features]
extension-module = ["pyo3/extension-module"]
