[package]
name = "strata-facts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "strata_facts"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
dunce.workspace = true
globset.workspace = true
hex.workspace = true
pyo3.workspace = true
rayon.workspace = true
ruff_python_ast.workspace = true
ruff_python_parser.workspace = true
ruff_text_size.workspace = true
sha2.workspace = true
walkdir.workspace = true
