[build-system]
requires = ["maturin>=1.14,<2"]
build-backend = "maturin"

[project]
name = "stratalint-native"
version = "0.1.0"
description = "Native fact-extraction core for stratalint"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/chio-labs/strata"
Issues = "https://github.com/chio-labs/strata/issues"
Repository = "https://github.com/chio-labs/strata"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "strata_facts"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "src/**/*.rs" },
  { file = "strata_facts.pyi" },
]
