[package]
name = "strata-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
duckdb = { workspace = true, optional = true }
gix.workspace = true
hex.workspace = true
pulldown-cmark.workspace = true
sha2.workspace = true

[features]
duckdb-engine = ["dep:duckdb"]
bundled-duckdb = ["duckdb-engine", "duckdb/bundled"]

[[test]]
name = "engine"
path = "tests/engine.rs"
required-features = ["duckdb-engine"]
