[package]
name = "strata-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
gix.workspace = true
hex.workspace = true
pulldown-cmark.workspace = true
rayon.workspace = true
rusqlite = { workspace = true, optional = true }
sha2.workspace = true
tempfile = { workspace = true, optional = true }

[features]
sqlite-engine = ["dep:rusqlite", "dep:tempfile"]

[[test]]
name = "engine"
path = "tests/engine.rs"
required-features = ["sqlite-engine"]
