[package]
name = "strata-native"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "strata_native"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2.workspace = true
globset.workspace = true
pyo3.workspace = true
rayon.workspace = true
ruff_python_ast.workspace = true
rusqlite.workspace = true
sha2.workspace = true
serde_json.workspace = true
strata-facts.workspace = true
strata-memory = { workspace = true, optional = true }

[features]
extension-module = ["pyo3/extension-module"]
memory = ["dep:strata-memory", "strata-memory/sqlite-engine"]
