[package]
name = "strata-structure-checker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
walkdir = "2"

[lib]
name = "strata_structure_checker"
path = "src/lib.rs"

[[bin]]
name = "strata-structure-checker"
path = "src/main.rs"
